--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body class="fixed-body">
     <div class="overlay is-hidden" data-modal>
         <div class="window">
-            <button class="close" data-modal-close></button>
+            <button data-modal-close>
+                <img src="./images/vector.svg" alt="" class="close">
+            </button>
         </div>
     </div>
 <header class="fixed-header">     
