--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body class="fixed-body">
     <div class="overlay is-hidden" data-modal>
         <div class="window">
-            <button data-modal-close>
-                <img src="./images/vector.svg" alt="" class="close">
+            <button class="modal-button" data-modal-close>
+                <!-- <img src="./images/vector.svg" alt="" class="close"> -->
             </button>
         </div>
     </div>
