problem-with-border

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
                 <div class="blue-window">
                     <p class="web-description">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
-                        исчерпывающие сведения  о компании или частном лице.
+                        исчерпывающие сведения о компании или частном лице.
                     </p>
                 </div>
                 </div>
@@ -92,7 +92,7 @@
                     <p class="web-description">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
                         получить
-                        исчерпывающие сведения  о компании или частном лице.
+                        исчерпывающие сведения о компании или частном лице.
                     </p>
                 </div>
                 </div>
@@ -106,7 +106,7 @@
                     <p class="web-description">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
                         получить
-                        исчерпывающие сведения  о компании или частном лице.
+                        исчерпывающие сведения о компании или частном лице.
                     </p>
                 </div>
                 </div>
@@ -120,7 +120,7 @@
                     <p class="web-description">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
                         получить
-                        исчерпывающие сведения  о компании или частном лице.
+                        исчерпывающие сведения о компании или частном лице.
                     </p>
                 </div>
                 </div> 
@@ -134,7 +134,7 @@
                     <p class="web-description">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
                         получить
-                        исчерпывающие сведения  о компании или частном лице.
+                        исчерпывающие сведения о компании или частном лице.
                     </p>
                 </div>
                 </div>
@@ -148,53 +148,58 @@
                     <p class="web-description">
                         Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
                         получить
-                        исчерпывающие сведения  о компании или частном лице.
+                        исчерпывающие сведения о компании или частном лице.
                     </p>
                 </div>
                 </div>  
                 </li>
             <li class="portfolio-item">
-                <a href="" class="link"><img src="./images/Limited edition.jpg" alt="Раскрытый журнал" class="portfolio-image display-block"></a>
+                <a href="" class="link"><img src="./images/Limited edition.jpg" alt="Монитор" class="portfolio-image display-block"></a>
                 <div class="site-footer">
-                <a href="" class="link website display-block">Издание Limited Edition</a>
-                <a href="" class="webtype link">Дизайн</>
+                    <a href="" class="link website display-block">Издание Limited Edition</a>
+                    <a href="" class="webtype link">Дизайн</a>
                     <div class="blue-window">
                         <p class="web-description">
-                            Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                            Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                            посетителю
                             получить
-                            исчерпывающие сведения  о компании или частном лице.
+                            исчерпывающие сведения о компании или частном лице.
                         </p>
                     </div>
+                </div>
+            </li>
+            <li class="portfolio-item">
+                <a href="" class="link"><img src="./images/LAB.jpg" alt="Монитор" class="portfolio-image display-block"></a>
+                <div class="site-footer">
+                    <a href="" class="link website display-block">Проект LAB</a>
+                    <a href="" class="webtype link">Маркетинг</a>
+                    <div class="blue-window">
+                        <p class="web-description">
+                            Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                            посетителю
+                            получить
+                            исчерпывающие сведения о компании или частном лице.
+                        </p>
                     </div>
-                        </li>
-            <li class="portfolio-item">
-                <a href="" class="link"><img src="./images/LAB.jpg" alt="Этикетка" class="portfolio-image display-block"></a> 
-                <div class="site-footer">
-                <a href="" class="link website display-block">Проект LAB</a>
-                <a href="" class="webtype link">Маркетинг</a>
-                <div class="blue-window">
-                    <p class="web-description">
-                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
-                        получить
-                        исчерпывающие сведения  о компании или частном лице.
-                    </p>
-                </div>
                 </div>
             </li>
             <li class="portfolio-item">
-                <a href="" class="link"><img src="./images/growing business.jpg" alt="Печать на ноутбуке" class="portfolio-image display-block"></a>
+                <a href="" class="link"><img src="./images/growing business.jpg" alt="Монитор" class="portfolio-image display-block"></a>
                 <div class="site-footer">
-                <a href="" class="link website display-block">Growing Business</a>
-                <a href="" class="webtype link">Приложение</a>
-                <div class="blue-window">
-                    <p class="web-description">
-                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
-                        получить
-                        исчерпывающие сведения  о компании или частном лице.
-                    </p>
+                    <a href="" class="link website display-block">Growing Business</a>
+                    <a href="" class="webtype link">Приложение</a>
+                    <div class="blue-window">
+                        <p class="web-description">
+                            Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+                            посетителю
+                            получить
+                            исчерпывающие сведения о компании или частном лице.
+                        </p>
+                    </div>
                 </div>
-                </div>
-            </li>
+            </li> 
+           
+           
 
         </ul>
 </div>
